# cosmos_checker

./: .env.example  .eslintrc.cjs  .gitignore  Dockerfile.ci  LICENSE  README.md  index.html  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: CLAUDE.md  arch.md  codegen_instructions.md  openapi.yaml  plan.md  project.md  resources.md  review.md  schema.sql  security.md  tests_spec.md
scripts/: gen_placeholder_icons.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/migrations/: 001_init.sql
src-tauri/proto/: .gitkeep
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/chain_registry/: fetcher.rs  mod.rs  parser.rs
src-tauri/src/checker/: mod.rs  pipeline.rs
src-tauri/src/commands/: chains.rs  check.rs  import.rs  mod.rs  ping.rs  results.rs  settings.rs  state.rs
src-tauri/src/crypto/: key_deriver.rs  mod.rs
src-tauri/src/db/: chains.rs  mod.rs  results.rs  sessions.rs  settings.rs
src-tauri/src/file_io/: exporter.rs  importer.rs  mod.rs
src-tauri/src/proxy/: mod.rs  parser.rs  rotator.rs  types.rs
src-tauri/src/security/: mod.rs  secret.rs
src-tauri/src/transport/: endpoints.rs  fallback.rs  grpc.rs  mod.rs  rest.rs  types.rs
src-tauri/tests/: chain_registry_integration.rs  checker_pipeline.rs  crypto_integration.rs  file_io_integration.rs  proxy_integration.rs  smoke.rs  transport_integration.rs
src/__tests__/: App.test.tsx
src/components/Dashboard/: index.tsx
src/components/ImportPanel/: index.tsx
src/components/NetworkSelector/: index.tsx
src/components/ResultsTable/: index.tsx
src/components/Settings/: index.tsx
src/ipc/: index.ts
src/store/: chains.ts  session.ts  settings.ts
src/types/: index.ts
